Editted swagger
