# Loan/src/routes/loanRoutes.ts
@@ -12,8 +12,8 @@ const router = Router();
 
 router.post("/add-type", addLoanType);
 router.get("/types", getLoanTypes);
-router.put("/edit-type/:id", editLoanType);
-router.delete("/delete-type/:id", deleteLoanType);
+router.put("/types/:id",editLoanType);
+router.delete("/types/:id", deleteLoanType);
 router.post("/calculate", calculateLoan);
 
 export default router;
